# ferrum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker-publish.yml
book/: CONTRIBUTING.md  book.toml
book/src/: SUMMARY.md  introduction.md
book/src/concepts/: admin-ui.md  components.md  content-types.md  draft-publish.md  fields.md  relations.md  single-types.md
book/src/getting-started/: first-content-type.md  first-run.md  installation.md
book/src/guides/: api-tokens.md  build-admin-ui.md  content-api.md  custom-field-widget.md  graphql.md  import-export.md  media-storage.md  roles.md  schema-as-code.md  webhooks.md  write-hooks.md
book/src/reference/: env-vars.md  graphql.md  openapi.md  rest-api.md
book/theme/: ferrum.css  rustapi.css
crates/core/: Cargo.toml
crates/core/src/: audit.rs  content_type.rs  error.rs  event.rs  field.rs  lib.rs  locale.rs  principal.rs  reserved.rs  system.rs  validators.rs
crates/http/: Cargo.toml
crates/http/src/: content_api.rs  cursor.rs  entry.rs  error.rs  filter.rs  lib.rs  locale_registry.rs  media_embed.rs  populate.rs  query.rs  reqctx.rs  state.rs
crates/http/src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs  users.rs
crates/http/src/graphql/: build.rs  handler.rs  mod.rs  resolve.rs  scalars.rs
crates/http/src/media/: boot.rs  mod.rs  store.rs
crates/http/src/middleware/: auth.rs
crates/http/src/openapi/: mod.rs  schema.rs  spec.rs  static_paths.rs
crates/http/src/roles/: mod.rs
crates/http/src/routes/: api_tokens.rs  audit.rs  components.rs  content.rs  health.rs  locales.rs  media.rs  mod.rs  roles.rs  schema.rs  single_type.rs  users.rs  webhooks.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs  local.rs  provider.rs  registry.rs  s3.rs  secret.rs
crates/media/tests/: s3_minio.rs
crates/schema/: Cargo.toml
crates/schema/migrations/: 0001_init.sql  0002_users.sql  0003_media.sql  0004_content_type_options.sql  0005_components.sql  0006_content_type_kind.sql  0007_api_tokens.sql  0008_api_token_description.sql  0009_webhooks.sql  0010_roles.sql  0011_user_status.sql  0012_audit_log.sql  0013_component_managed.sql  0016_locales.sql
crates/schema/src/: bind.rs  component.rs  lib.rs  registry.rs  service.rs  sync.rs
crates/schema/tests/: sync_it.rs
crates/sql/: Cargo.toml
crates/sql/src/: api_tokens.rs  audit.rs  component.rs  ddl.rs  dml.rs  filter.rs  ident.rs  lib.rs  locales.rs  roles.rs  sort.rs  webhooks.rs
docs/superpowers/plans/: 2026-05-28-00-workspace-bootstrap.md  2026-05-28-01-core-crate.md  2026-05-28-02-sql-crate.md  2026-05-28-03-schema-crate.md  2026-05-28-04-http-crate.md  2026-05-28-05-bin-and-integration.md  2026-05-29-filters-eq-ne-null.md  2026-05-29-filters-or-not.md  2026-05-29-filters-order-set-string.md  2026-05-31-fieldkinds-richer.md  2026-06-02-auth-email-password-jwt.md  2026-06-02-relations-one-to-one-many-to-many.md  2026-06-02-ui-design-match-seed.md  2026-06-03-media-library-backend.md  2026-06-03-ui-auth-email-password.md  2026-06-03-user-management.md  2026-06-04-field-type-picker.md  2026-06-04-media-field-kind.md  2026-06-04-media-library-ui.md  2026-06-04-media-settings-ui.md  2026-06-04-openapi-docs.md  2026-06-05-draft-publish.md  2026-06-07-injectable-custom-routers.md  2026-06-07-ui-consistency-pass.md  2026-06-07-write-hooks.md  2026-06-08-components.md  2026-06-10-api-tokens.md  2026-06-12-graphql-surface.md  2026-06-13-audit-log.md  2026-06-13-graphql-nested-populate.md  2026-06-14-schema-as-code-toml-sync.md  2026-06-15-component-schema-file-support.md  2026-06-15-docs-site.md  2026-06-16-docker-image-distribution.md  2026-06-19-localization-backend.md  2026-06-20-localization-ui.md  README.md
docs/superpowers/specs/: 2026-05-28-rustapi-core-design.md  2026-05-29-filters-eq-ne-null-design.md  2026-05-29-filters-or-not-design.md  2026-05-29-filters-order-set-string-design.md  2026-05-31-fieldkinds-richer-design.md  2026-06-02-auth-email-password-jwt-design.md  2026-06-02-relations-one-to-one-many-to-many-design.md  2026-06-02-ui-design-match-and-seed-design.md  2026-06-03-media-library-backend-design.md  2026-06-03-roles-screen-readonly-design.md  2026-06-03-ui-auth-email-password-design.md  2026-06-03-user-management-design.md  2026-06-04-draft-publish-design.md  2026-06-04-field-type-picker-design.md  2026-06-04-media-field-kind-design.md  2026-06-04-media-library-ui-design.md  2026-06-04-media-settings-ui-design.md  2026-06-04-openapi-docs-design.md  2026-06-07-extensibility-roadmap.md  2026-06-07-injectable-custom-routers-design.md  2026-06-07-ui-consistency-pass-design.md  2026-06-07-write-hooks-design.md  2026-06-08-components-design.md  2026-06-10-api-tokens-design.md  2026-06-12-graphql-surface-design.md  2026-06-13-audit-log-design.md  2026-06-13-graphql-nested-populate-design.md  2026-06-14-schema-as-code-toml-sync-design.md  2026-06-15-component-schema-file-support-design.md  2026-06-15-docs-site-design.md  2026-06-16-docker-image-distribution-design.md  2026-06-19-localization-backend-design.md  2026-06-20-localization-ui-design.md
examples/custom-routes/: checkout.rs
examples/schema/blog/: author.toml  category.toml  post.toml  seo.toml  tag.toml
examples/schema/ecommerce/: category.toml  components.toml  customer.toml  order.toml  product.toml
memory/: INDEX.md  architecture.md  decisions.md  gotchas.md  progress.md
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  Layout.tsx  auth.ts  roles.ts  styles.css  util.ts
ui/src/api/: audit.ts  client.ts  endpoints.ts  locales.ts  types.ts  webhooks.ts
ui/src/builder/: BuilderDraftContext.tsx  CreateComponentModal.tsx  CreateSingleTypeModal.tsx  CreateTypeModal.tsx  EnumEditor.tsx  FieldConfigModal.tsx  FieldPicker.tsx  FieldRow.tsx  SaveBar.tsx  SaveConfirmModal.tsx  SchemaEditor.tsx  draftModel.ts
ui/src/components/: FieldInput.tsx  MediaImageExtension.ts  RichTextEditor.tsx  StatCard.tsx  icons.tsx  shell.tsx  ui.tsx
(+38 files in other folders)
