[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/sql",
    "crates/schema",
    "crates/http",
    "crates/media",
    "crates/bin",
]

[workspace.package]
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["rustapi contributors"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "sync"] }

# Web
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
hyper = "1.4"

# GraphQL
async-graphql = { version = "7", features = ["dynamic-schema", "chrono"] }
async-graphql-axum = "7"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time / IDs
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# Media / Storage
async-trait = "0.1"
bytes = "1"
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
infer = "0.16"
imagesize = "0.13"
arc-swap = "1"

# Tests
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
