[package]
name = "rustapi-http"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustapi-core = { path = "../core" }
rustapi-sql = { path = "../sql" }
rustapi-schema = { path = "../schema" }
rustapi-media = { path = "../media" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait = "0.1"
anyhow.workspace = true
regex = "1"
url = "2"
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
infer = { workspace = true }
imagesize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
