[package]
name = "rustapi-sql"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustapi-core = { path = "../core" }
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
sha2 = "0.10"
hex = "0.4"
